<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.GetCallRecords">

    <Button
            android:text="@string/outGoingCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOfOutGoingCall"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@+id/buttonOfReceivedCall"
            app:layout_constraintBottom_toTopOf="@+id/textViewOfGetResult"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="buttonOfOutGoingCall"/>

    <Button
            android:text="@string/receivedCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOfReceivedCall"
            app:layout_constraintStart_toEndOf="@+id/buttonOfOutGoingCall"
            app:layout_constraintEnd_toStartOf="@+id/buttonOfMissedCall"
            app:layout_constraintBottom_toTopOf="@+id/textViewOfGetResult"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="buttonOfReceivedCall"
            />

    <Button
            android:text="@string/missedCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOfMissedCall"
            app:layout_constraintStart_toEndOf="@+id/buttonOfReceivedCall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textViewOfGetResult"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="buttonOfMissedCall"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textViewOfGetResult"
            app:layout_constraintTop_toBottomOf="@+id/buttonOfMissedCall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="vertical"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>