<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.StaCallRecords">

    <Button
            android:text="@string/maxTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOfMaxTime"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@+id/buttonOfMostTimes"
            app:layout_constraintBottom_toTopOf="@+id/textViewOfStaResult"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="buttonOfMaxTime"
            />

    <Button
            android:text="@string/lastFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOfLastFive"
            app:layout_constraintTop_toTopOf="@+id/buttonOfMostTimes"
            app:layout_constraintBottom_toBottomOf="@+id/buttonOfMostTimes"
            app:layout_constraintStart_toEndOf="@+id/buttonOfMostTimes"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="buttonOfLastFive"
            />

    <Button
            android:text="@string/mostTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOfMostTimes"
            app:layout_constraintTop_toTopOf="@+id/buttonOfMaxTime"
            app:layout_constraintBottom_toBottomOf="@+id/buttonOfMaxTime"
            app:layout_constraintStart_toEndOf="@+id/buttonOfMaxTime"
            app:layout_constraintEnd_toStartOf="@+id/buttonOfLastFive"
            android:onClick="buttonOfMostTimes"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textViewOfStaResult"
            app:layout_constraintTop_toBottomOf="@+id/buttonOfMaxTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="vertical"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>