<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="-40dp"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="480dp"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_begin="140dp"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            app:layout_constraintGuide_begin="200dp"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            app:layout_constraintGuide_begin="300dp"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline7"
            app:layout_constraintGuide_begin="360dp"
            android:orientation="horizontal"/>

    <Button
            android:text="@string/getCallRecords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/button"
            android:onClick="buttonOne"/>

    <Button
            android:text="@string/staCallRecords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button1"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            android:layout_marginTop="114dp"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            android:background="@drawable/button"
            android:onClick="buttonTwo"/>

    <TextView
            android:text="@string/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOfVersion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="46dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
